--- a/HelloDoc/Views/AdminDash/PhysicianScheduling.cshtml
+++ b/HelloDoc/Views/AdminDash/PhysicianScheduling.cshtml
@@ -154,7 +154,7 @@
 		text-wrap:balance;
 	}
 </style>
-<div class="container-fluid bg-body-secondary mb-3" style="height:78vh" >
+<div class="container-fluid bg-body-secondary mb-3" id="C-Container" style="height:78vh" >
 <div class="justify-content-between d-flex container-fluid pb-2 position-relative container ">
     <div class="">
         <h3 class="mt-2"> Scheduling </h3>
