--- a/HelloDoc/Views/ProviderDashBoard/Scheduling/CreateShiftPartial.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/Scheduling/CreateShiftPartial.cshtml
@@ -184,7 +184,7 @@
         if (regionid != 0) {
             $.ajax({
                 type: "GET",
-                url: "/AdminDash/GetPhysicianForTransfer",
+                url: "/AdminDash/GetPhysician",
                 data: { regionid: regionid },
                 success: function (response) {
 
