--- a/HelloDoc/Views/Request/Patient_Request.cshtml
+++ b/HelloDoc/Views/Request/Patient_Request.cshtml
@@ -235,7 +235,7 @@
 						<div class="row mb-5 pb-3">
 							<div class="d-grid gap-2 d-flex justify-content-end mt-4">
 								<button class="btn btn-info me-md-2 text-white" type="submit" id="submitBtn">Submit</button>
-								<button class="btn btn-outline-info" type="button">Cancle</button>
+								<button class="btn btn-outline-info" type="reset">Cancle</button>
 					</form>
 				</div>
 			</div>
