--- a/HelloDoc/Views/AdminDash/Partners/_PartnersPartial.cshtml
+++ b/HelloDoc/Views/AdminDash/Partners/_PartnersPartial.cshtml
@@ -25,7 +25,7 @@
                         <td>@item.BusinessContact</td>
                     <td>
                         <a asp-action="EditBusinessData" asp-route-id="@item.vendorid"  class="btn btn-outline-info">Edit</a>
-                        <a asp-action="DeleteBusinessData" class="btn btn-outline-info">Delete</a>
+                        <a asp-action="DeleteBusinessData" asp-route-vendorid="@item.vendorid" class="btn btn-outline-info">Delete</a>
                     </td>
                      
                     </tr>
