--- a/HelloDoc/Views/DashBoard/Index.cshtml
+++ b/HelloDoc/Views/DashBoard/Index.cshtml
@@ -4,12 +4,14 @@
     Layout = "~/Views/Shared/_Layout-1.cshtml";
 }
 <div class="row">
-    <ul class="nav nav-underline" id="pills-tab" role="tablist">
-        <li class="nav-item " role="presentation">
-            <button class="nav-link text-info " id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
+    <ul class="nav ms-2" id="pills-tab" role="tablist">
+        <li class="nav-item  nav-underline" role="presentation">
+            <button class="nav-link text-info active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Home</button>
         </li>
-        <li class="nav-item " role="presentation" >
-            <a asp-action="Patient_profile" asp-controller="DashBoard" style="text-decoration:none!important "> <button class="nav-link text-info" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button></a>
+        <li class="nav-item" role="presentation" >
+            <a asp-action="Patient_profile" asp-controller="DashBoard" style="text-decoration:none!important ">
+                <button class="nav-link   text-info" @(ViewContext.ActionDescriptor.RouteValues["action"] == "Patient_profile" ? "active" : "") id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
+                </a>
         </li>
 
     </ul>
