--- a/HelloDoc/Views/Login/Patient_ResetPassword.cshtml
+++ b/HelloDoc/Views/Login/Patient_ResetPassword.cshtml
@@ -11,9 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Patient Reset Password Page</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="~/css/Patient_ResetPassword.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
+
   </head>
   <body>
     <div class="container-fluid">
@@ -23,7 +25,7 @@
         </div>
         <div class="col col-lg-6 col-sm-12 text-center right-side">
           <div class="dark-button float-end">
-            <button class="dark-button float-end border border-info bg-white">
+                    <button class="dark-button float-end border border-info white-bag" id="theme-toggle">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="30"
@@ -78,7 +80,7 @@
                 <img
                   src="../images/user_circle.svg"
                   alt=""
-                  class="pe-3 bg-white"
+                  class="pe-3 white-bag"
                 />
                 <label for="floatingInput">Email</label>
                  <span asp-validation-for="Email"></span>
@@ -121,6 +123,8 @@
         </footer>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
   </body>
 </html>
 
