--- a/HelloDoc/Views/Login/ResetPasswordPage.cshtml
+++ b/HelloDoc/Views/Login/ResetPasswordPage.cshtml
@@ -7,7 +7,7 @@
     var data = ViewBag.ShowAlert;
 }
 
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" asp-append-version="true" />
-
     <link rel="stylesheet" href="~/css/Patient_login.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" asp-append-version="true" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     @if (data)
@@ -34,7 +34,7 @@
             </div>
 
             <div class="col col-lg-6 col-sm-12 text-center right-side">
-                <button class=" dark-button float-end shadow-none border-info" id="theme-toggle">
+                <button class="btn dark-button float-end border-3 border-info" id="theme-toggle">
                     <svg xmlns="http://www.w3.org/2000/svg"
                          width="30"
                          height="35"
