--- a/HelloDoc/Views/Shared/_AdminDash.cshtml
+++ b/HelloDoc/Views/Shared/_AdminDash.cshtml
@@ -25,17 +25,17 @@
    
 
 </head>
-<@* div id="overlay">
+@*< div id="overlay">
     <div class="cv-spinner">
         <span class="spinner"></span>
     </div>
 </div> *@
 <body>
     <header>
-        <div class="container-fluid">
-            <div class="row border border-bottom shadow">
+        <div class="container-fluid px-0">
+            <div class="row border border-bottom ">
                 <!-- -----------------nav--------------- -->
-                <div class="col col-12 d-flex mb-1 flex-row justify-content-between">
+                <div class="col col-12 d-flex mb-1 flex-row px-3 justify-content-between" style="height:5.5rem">
 
                     <button class="btn btn-outline-info  d-sm-none d-inline" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions"
                             aria-controls="offcanvasWithBothOptions">
@@ -44,11 +44,11 @@
                         </svg>
                     </button>
 
-                    <div class="doct-logo d-none d-sm-inline">
+                    <div class="doct-logo d-none d-sm-inline my-auto">
                         <img src="~/images/doct-logo-2.png" alt="" style="height:4rem" />
                     </div>
 
-                    <div class=" float-end ">
+                    <div class=" float-end  my-auto">
                         <span class="fw-bold me-2 d-none d-sm-inline">Welcome: @TempData["username"]</span>
                         <a asp-action="Logout" asp-controller="Login">
 
@@ -58,12 +58,12 @@
                                     <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z" />
                                     <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z" />
                                 </svg>
-                                <span class="d-none d-sm-inline">logout</span>
+                                <span class="d-none d-sm-inline">Logout</span>
 
                             </button>
                         </a>
 
-                        <button class="btn dark-button float-end border-3  border-info" id="theme-toggle">
+                        <button class="btn dark-button float-end border-2  border-info" id="theme-toggle" style="height:3rem">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  width="29"
                                  height="29"
@@ -79,8 +79,8 @@
 
             </div>
             <!-- Nav tabs -->
-            <div class="w-100 shadow  px-2 px-md-5  pt-2  border-5 border-bottom-5 d-none d-sm-block pb-1  ">
-                <ul class="nav nav-tabs-info nav-underline fs-4 " id="pills-tab" role="tablist">
+            <div class="w-100 shadow   px-md-3  pt-2  border-5 border-bottom-5 d-none d-sm-block pb-1  ">
+                <ul class="nav nav-tabs-info nav-underline gap-4 " id="pills-tab" role="tablist" style="font-size:20px">
                     <li class="nav-item ">
                         <a asp-action="AdminDash" asp-controller="AdminDash" style="text-decoration:none">
                             <button class="nav-link  text-info  
@@ -92,18 +92,18 @@
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a asp-action="ProviderLocation" class="nav-link text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "ProviderLocation" ? "active" : "")">Provider Location</a>
+                        <a asp-action="ProviderLocation" class="nav-link text-info ms-2 @(ViewContext.ActionDescriptor.RouteValues["action"] == "ProviderLocation" ? "active" : "")">Provider Location</a>
                     </li>
                     <li class="nav-item">
                         <a asp-action="AdminProfile" asp-controller="AdminDash" style="text-decoration:none">
-                            <button class="nav-link text-info
+                            <button class="nav-link text-info ms-2
                             @(ViewContext.ActionDescriptor.RouteValues["action"] == "AdminProfile" ? "active" : "")">
                                 My Profile
                             </button>
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link  text-info  @(new string[] { "Provider", "PhysicianScheduling", "ReviewShift","CreateProviderAccount","PhysicianProfile","MdOnCall" }
+                        <a class="nav-link  text-info  ms-2 @(new string[] { "Provider", "PhysicianScheduling", "ReviewShift","CreateProviderAccount","PhysicianProfile","MdOnCall" }
                             .Contains(ViewContext.ActionDescriptor.RouteValues["action"]) ? "active" : "")" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Provider
                         </a>
@@ -119,7 +119,7 @@
                     </li>
                     
                     <li class="nav-item dropdown">
-                        <a class="nav-link  text-info
+                        <a class="nav-link  text-info ms-2
 
                         @(new string[] { "UserAccess", "CreateAdminAccount", "AccountAccess","CreateAccess" }
                             .Contains(ViewContext.ActionDescriptor.RouteValues["action"]) ? "active" : "")"
@@ -132,7 +132,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link  text-info
+                        <a class="nav-link  text-info ms-2
                         @(new string[] { "Records", "SearchRecords", "PatientHistory", "BlockHistory" }
                         .Contains(ViewContext.ActionDescriptor.RouteValues["action"]) ? "active" : "")"
                            role="button" data-bs-toggle="dropdown" aria-expanded="false"> Records </a>
@@ -235,7 +235,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer   bg-dark text-white pe-3 footer position-absolute  w-100 align-middle bottom-0 " style="height: 6vh !important;">
+    <footer class="border-top footer   bg-dark text-white pe-3 footer position-absolute  w-100 align-middle bottom-0 z-1" style="height: 6vh !important;">
         <div class="d-flex flex-row justify-content-end align-items-center my-auto h-100 py-auto w-100">
             <span>Terms Of Condition | Privacy Policy</span>
         </div>
